<resources>
    <string name="app_name">TicTacToeKotlin</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="player_two">Player Two</string>
    <string name="player_one">Player One</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="continueActivity">Continue</string>
    <string name="play_with_computer">Play with computer</string>
    <string name="play_with_local_friend">Play local</string>
    <string name="exit">Exit</string>
    <string name="x">X</string>
    <string name="o">0</string>
</resources>